k8s/task-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: task-service

spec:
  replicas: 2

  selector:
    matchLabels:
      app: task-service

  template:
    metadata:
      labels:
        app: task-service

    spec:
      containers:
      - name: task-service

        image: ${MY_REGISTRY}/task-service:${IMAGE_TAG}

        ports:
        - containerPort: 8080

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"

          limits:
            cpu: "500m"
            memory: "512Mi"

        livenessProbe:
          httpGet:
            path: /health
            port: 8080

          initialDelaySeconds: 15
          periodSeconds: 25

        readinessProbe:
          httpGet:
            path: /health
            port: 8080

          initialDelaySeconds: 10
          periodSeconds: 25
