k8s/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: user-service

spec:
  replicas: 2

  selector:
    matchLabels:
      app: user-service

  template:
    metadata:
      labels:
        app: user-service

    spec:
      containers:
      - name: user-service
        image: ${MY_REGISTRY}/user-service:${IMAGE_TAG}

        ports:
        - containerPort: 8080
