k8s/task-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: task-service

spec:
  selector:
    app: task-service

  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080

  type: ClusterIP
