k8s/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-service
  ports:
  - port: 80 # This is the port that the service will expose
    targetPort: 8080 # This is the port that the container is listening on
  type: ClusterIP
