k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: taskflow-ingress

spec:
  ingressClassName: nginx

  rules:
  - http:
      paths:

      - path: /users
        pathType: Prefix

        backend:
          service:
            name: user-service

            port:
              number: 80

      - path: /tasks
        pathType: Prefix

        backend:
          service:
            name: task-service

            port:
              number: 80
